# md

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  2.py  CLI_DOCUMENTATION.md  COMPREHENSIVE_FIX_SUMMARY_JUNE_18.md  DEVELOPMENT_SESSION_SUMMARY_JUNE_16.md  DEVELOPMENT_SESSION_SUMMARY_JUNE_16_CROSS_CORRELATION_GUI.md  Dockerfile  MEMORY_OPTIMIZATION_GUIDE.md  Makefile  ORGANIZATION_STRUCTURE.md  README  README.md  TASK_10_1_FINAL_PROGRESS_REPORT.md  TASK_10_1_PROGRESS_REPORT_JUNE_16_CROSS_CORRELATION_FIX.md  TASK_10_1_SUCCESS_SUMMARY.md  TASK_10_2_IMPLEMENTATION_SUMMARY.md  TASK_10_3_COMPLETION_REPORT.md  TASK_10_4_EXECUTIVE_SUMMARY.md  TASK_11_1_COMPREHENSIVE_API_DOCUMENTATION_COMPLETE.md  TASK_12_1_MULTI_FORMAT_COMPLETION_REPORT.md  TASK_13_2_COMPLETION_REPORT.md  TASK_13_2_CROSS_CORRELATION_COMPLETION_REPORT.md  TASK_13_2_CROSS_CORRELATION_GUI_INTEGRATION_COMPLETION_REPORT.md  TASK_2_2_COMPLETION_REPORT.md  TASK_2_4_COMPLETION_REPORT.md  TASK_3_3_COMPLETION_REPORT.md  TASK_3_4_COMPLETION_REPORT.md  TASK_3_5_COMPLETION_REPORT.md  TASK_6_3_COMPLETION_REPORT.md  TASK_6_4_COMPLETION_REPORT.md  TASK_8_1_GUI_COMPLETION_REPORT.md  aufgabenliste.md  aufgabenliste.txt  benchmark_results_500particles.json  demo_cross_correlation_gui_integration.py  demo_free_energy_gui_integration.py  demo_gui_completion.py  (+56 more)
backup_files/: README  mdrl.py.mpl_backup
benchmarks/: large_scale_cli_test.py  simple_memory_test.py
config/: logging.json
demo_outputs/: demo_metadynamics.py  demo_ss_data.json  demonstrate_trajectory_fix.py
demos/: demo_sasa_gui_integration.py  demo_steered_md.py
docs/: CUSTOM_FORCEFIELD_GUIDE.md  GUI_COMPLETION_REPORT.md  SIMULATION_TEMPLATES_GUIDE.md  conf.py  generate_pdf.sh
docs_env/: pyvenv.cfg
examples/: advanced_features.py  basic_simulation.py  custom_ff_example.xml  default_config.json  equilibration_config.json  fast_implicit_config.json  forcefield_example.json  free_energy_config.json  membrane_simulation.py  protein_folding_config.yaml  simple_custom_ff.json  steered_md_config.json
memory_analysis/: enhanced_memory_fixes.py  final_memory_validation.py  realistic_memory_assessment.py  validate_memory_fixes.py
misc_scripts/: m.py  task_7_3_final_implementation.py
output/: 1ubq_trajectory.npz  simple_test_fixed.npz
proteinMD/: .coverage  TASK_10_1_COMPLETION_REPORT.md  TASK_4_1_COMPLETION_REPORT.md  TASK_4_1_FINAL_STATUS.md  TASK_4_1_SUMMARY.md  TASK_5_1_COMPLETION_REPORT.md  __init__.py  cli.py  demo_multithreading.py  demo_replica_exchange.py  demo_tip3p.py  demo_trajectory_animation.py  demo_umbrella_sampling.py  demonstrate_tip3p.py  integration_test_results.json  quick_tip3p_validation.py  rg_data_demo.csv  rg_data_demo.json  task_10_1_completion.py  task_10_2_validation_results.json  task_10_4_completion.py  task_10_4_final_demonstration.py  test_charmm36_comprehensive.py  test_custom_forcefield_comprehensive.py  test_multithreading_final.py  test_multithreading_improved.py  test_multithreading_simple.py  test_optimized_nonbonded_comprehensive.py  test_replica_exchange_simple.py  test_rmsd_data.csv  test_task_41_completion.py  test_trajectory_animation_simple.py  validate_replica_exchange.py  validate_task_10_2.py  validate_task_41_final.py  validate_tip3p.py  validate_trajectory_animation.py
proteinMD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: DEVELOPMENT_SESSION_SUMMARY_JUNE_16_SASA_GUI_INTEGRATION.md  FIX_STATUS_REPORT_JUNE_17.md  TASK_10_1_MISSION_ACCOMPLISHED.md  TASK_10_1_PROGRESS_REPORT.md  TASK_12_2_LARGE_FILE_COMPLETION_REPORT.md  TASK_13_1_PCA_COMPLETION_REPORT.md  TASK_13_1_PCA_GUI_INTEGRATION_COMPLETION_REPORT.md  TASK_13_3_COMPLETION_REPORT.md  TASK_15_1_ERROR_HANDLING_COMPLETION_REPORT.md  TASK_4_2_COMPLETION_REPORT.md  TASK_9_1_COMPLETION_REPORT.md
scripts/: ma.py  mdrl.py
task_reports/: TASK_10_2_COMPLETION_REPORT.md  TASK_10_4_COMPLETION_REPORT.md  TASK_11_2_DEVELOPER_DOCUMENTATION_COMPLETE.md  TASK_15_1_ERROR_HANDLING_COMPLETION_REPORT.md  TASK_1_1_COMPLETED.md  TASK_1_3_COMPLETED.md  TASK_2_1_COMPLETED.md  TASK_2_2_TRAJECTORY_ANIMATION_COMPLETE.md  TASK_2_3_COMPLETION_REPORT.md  TASK_3_1_3_3_COMPLETION_REPORT.md  TASK_4_1_COMPLETION_REPORT.md  TASK_5_2_COMPLETION_REPORT.md  TASK_5_2_SUMMARY.md  TASK_5_3_COMPLETION_REPORT.md  TASK_6_2_COMPLETION_REPORT.md  TASK_7_1_COMPLETION_REPORT.md  TASK_7_2_COMPLETION_REPORT.md  TASK_8_3_COMPLETION_REPORT.md  task_10_3_implementation.py
temp_scripts/: direct_pbc_test.py  optimized_simulation.py  quick_gpu_validation.py  simple_ss_test.py  validate_task_5_2.py
test_files/: task_1_1_final.npz  test_100_final.npz  test_200_final.npz  test_250_steps.npz  test_300_final.npz  test_500_steps.npz  test_implicit_solvent.py  test_multiple_proteins.py  test_protein_3d.py  test_radius_of_gyration_analysis.py  test_rmsd_data.csv  test_task_1_1.npz  test_task_1_1_long.npz  test_task_3_5_hbonds.csv  (+8 more)
(+445 files in other folders)
